k8s/dev/github-runner/base/dind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-runner
  labels:
    app: github-runner
spec:
  replicas: 0
  selector:
    matchLabels:
      app: github-runner
  template:
    metadata:
      labels:
        app: github-runner
    spec:
      containers:
        - name: runner
          image: ghcr.io/wywysenarios/gh-runner:2.336.0
          securityContext:
            # required for DinD
            privileged: true
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2Gi
              ephemeral-storage: 10Gi
          volumeMounts:
            - name: docker-data
              mountPath: /var/lib/docker

      imagePullSecrets:
        - name: regcred-ghcr
      volumes:
        - name: docker-data
          emptyDir:
            sizeLimit: 10Gi
